@@ -30,6 +30,8 @@ public abstract class ContainerProvider {
 
     /**
      * Create a new container used to create outgoing WebSocket connections.
+     *
+     * @return A newly created container.
      */
     public static WebSocketContainer getWebSocketContainer() {
         WebSocketContainer result = null;
@@ -48,9 +50,9 @@ public abstract class ContainerProvider {
                 Class<WebSocketContainer> clazz =
                         (Class<WebSocketContainer>) Class.forName(
                                 DEFAULT_PROVIDER_CLASS_NAME);
-                result = clazz.newInstance();
-            } catch (ClassNotFoundException | InstantiationException |
-                    IllegalAccessException e) {
+                result = clazz.getConstructor().newInstance();
+            } catch (ReflectiveOperationException | IllegalArgumentException |
+                    SecurityException e) {
                 // No options left. Just return null.
             }
         }
