@@ -33,21 +33,26 @@ import java.util.regex.Pattern;
 
 import javax.servlet.ServletContext;
 
+import org.apache.catalina.Context;
+import org.apache.tomcat.util.scan.JarFactory;
+
 /**
  * A variation of Java's JAR ServiceLoader that respects exclusion rules for
  * web applications.
- * <p/>
+ * <p>
  * Primarily intended for use loading ServletContainerInitializers as defined
  * by Servlet 8.2.4. This implementation does not attempt lazy loading as the
  * container is required to introspect all implementations discovered.
- * <p/>
+ * <p>
  * If the ServletContext defines ORDERED_LIBS, then only JARs in WEB-INF/lib
  * that are named in that set will be included in the search for
  * provider configuration files; if ORDERED_LIBS is not defined then
  * all JARs will be searched for provider configuration files. Providers
  * defined by resources in the parent ClassLoader will always be returned.
- * <p/>
+ * <p>
  * Provider classes will be loaded using the context's ClassLoader.
+ *
+ * @param <T> The type of service to load
  *
  * @see javax.servlet.ServletContainerInitializer
  * @see java.util.ServiceLoader
@@ -56,7 +61,8 @@ public class WebappServiceLoader<T> {
     private static final String LIB = "/WEB-INF/lib/";
     private static final String SERVICES = "META-INF/services/";
 
-    private final ServletContext context;
+    private final Context context;
+    private final ServletContext servletContext;
     private final Pattern containerSciFilterPattern;
 
     /**
@@ -64,8 +70,10 @@ public class WebappServiceLoader<T> {
      *
      * @param context the context to use
      */
-    public WebappServiceLoader(ServletContext context, String containerSciFilter) {
+    public WebappServiceLoader(Context context) {
         this.context = context;
+        this.servletContext = context.getServletContext();
+        String containerSciFilter = context.getContainerSciFilter();
         if (containerSciFilter != null && containerSciFilter.length() > 0) {
             containerSciFilterPattern = Pattern.compile(containerSciFilter);
         } else {
@@ -86,17 +94,17 @@ public class WebappServiceLoader<T> {
         LinkedHashSet<String> applicationServicesFound = new LinkedHashSet<>();
         LinkedHashSet<String> containerServicesFound = new LinkedHashSet<>();
 
-        ClassLoader loader = context.getClassLoader();
+        ClassLoader loader = servletContext.getClassLoader();
 
         // if the ServletContext has ORDERED_LIBS, then use that to specify the
         // set of JARs from WEB-INF/lib that should be used for loading services
         @SuppressWarnings("unchecked")
         List<String> orderedLibs =
-                (List<String>) context.getAttribute(ServletContext.ORDERED_LIBS);
+                (List<String>) servletContext.getAttribute(ServletContext.ORDERED_LIBS);
         if (orderedLibs != null) {
             // handle ordered libs directly, ...
             for (String lib : orderedLibs) {
-                URL jarUrl = context.getResource(LIB + lib);
+                URL jarUrl = servletContext.getResource(LIB + lib);
                 if (jarUrl == null) {
                     // should not happen, just ignore
                     continue;
@@ -107,7 +115,7 @@ public class WebappServiceLoader<T> {
                 if (base.endsWith("/")) {
                     url = new URL(base + configFile);
                 } else {
-                    url = new URL("jar:" + base + "!/" + configFile);
+                    url = JarFactory.getJarEntryURL(jarUrl, configFile);
                 }
                 try {
                     parseConfigFile(applicationServicesFound, url);
@@ -117,7 +125,7 @@ public class WebappServiceLoader<T> {
             }
 
             // and the parent ClassLoader for all others
-            loader = loader.getParent();
+            loader = context.getParentClassLoader();
         }
 
         Enumeration<URL> resources;
@@ -153,10 +161,9 @@ public class WebappServiceLoader<T> {
 
     void parseConfigFile(LinkedHashSet<String> servicesFound, URL url)
             throws IOException {
-        try (InputStream is = url.openStream()) {
-            InputStreamReader in =
-                    new InputStreamReader(is, StandardCharsets.UTF_8);
-            BufferedReader reader = new BufferedReader(in);
+        try (InputStream is = url.openStream();
+            InputStreamReader in = new InputStreamReader(is, StandardCharsets.UTF_8);
+            BufferedReader reader = new BufferedReader(in)) {
             String line;
             while ((line = reader.readLine()) != null) {
                 int i = line.indexOf('#');
@@ -174,14 +181,13 @@ public class WebappServiceLoader<T> {
 
     List<T> loadServices(Class<T> serviceType, LinkedHashSet<String> servicesFound)
             throws IOException {
-        ClassLoader loader = context.getClassLoader();
+        ClassLoader loader = servletContext.getClassLoader();
         List<T> services = new ArrayList<>(servicesFound.size());
         for (String serviceClass : servicesFound) {
             try {
                 Class<?> clazz = Class.forName(serviceClass, true, loader);
-                services.add(serviceType.cast(clazz.newInstance()));
-            } catch (ClassNotFoundException | InstantiationException |
-                    IllegalAccessException | ClassCastException e) {
+                services.add(serviceType.cast(clazz.getConstructor().newInstance()));
+            } catch (ReflectiveOperationException | ClassCastException e) {
                 throw new IOException(e);
             }
         }
