@@ -17,25 +17,28 @@
 package org.apache.catalina.storeconfig;
 
 import javax.management.DynamicMBean;
-import javax.management.MBeanServer;
 import javax.management.ObjectName;
 
 import org.apache.catalina.Lifecycle;
 import org.apache.catalina.LifecycleEvent;
 import org.apache.catalina.LifecycleListener;
-import org.apache.catalina.core.StandardServer;
+import org.apache.catalina.Server;
 import org.apache.catalina.mbeans.MBeanUtils;
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
 import org.apache.tomcat.util.modeler.ManagedBean;
 import org.apache.tomcat.util.modeler.Registry;
+import org.apache.tomcat.util.res.StringManager;
 
 /**
- * Load and Register StoreConfig MBean <i>Catalina:type=StoreConfig,resource="url"</i>
+ * Loads and registers a StoreConfig MBean with the name
+ * <i>Catalina:type=StoreConfig</i>. This listener should only be used with a
+ * {@link Server}.
  */
 public class StoreConfigLifecycleListener implements LifecycleListener {
-    private static Log log = LogFactory
-            .getLog(StoreConfigLifecycleListener.class);
+
+    private static Log log = LogFactory.getLog(StoreConfigLifecycleListener.class);
+    private static StringManager sm = StringManager.getManager(StoreConfigLifecycleListener.class);
 
     /**
      * The configuration information registry for our managed beans.
@@ -48,61 +51,63 @@ public class StoreConfigLifecycleListener implements LifecycleListener {
     private String storeConfigClass = "org.apache.catalina.storeconfig.StoreConfig";
 
     private String storeRegistry = null;
+    private ObjectName oname = null;
 
-    /*
-     * register StoreRegistry after Start the complete Server
+    /**
+     * Register StoreRegistry after Start the complete Server.
      *
      * @see org.apache.catalina.LifecycleListener#lifecycleEvent(org.apache.catalina.LifecycleEvent)
      */
     @Override
     public void lifecycleEvent(LifecycleEvent event) {
         if (Lifecycle.AFTER_START_EVENT.equals(event.getType())) {
-            if (event.getSource() instanceof StandardServer) {
-                createMBean((StandardServer) event.getSource());
+            if (event.getSource() instanceof Server) {
+                createMBean((Server) event.getSource());
+            } else {
+                log.warn(sm.getString("storeConfigListener.notServer"));
+            }
+        } else if (Lifecycle.AFTER_STOP_EVENT.equals(event.getType())) {
+            if (oname != null) {
+                registry.unregisterComponent(oname);
+                oname = null;
             }
         }
-    }
+     }
 
     /**
-     * create StoreConfig MBean and load StoreRgistry MBeans name is
-     * <i>Catalina:type=StoreConfig </i>
+     * Create StoreConfig MBean and load StoreRegistry MBeans name is
+     * <code>Catalina:type=StoreConfig</code>.
+     * @param server The Server instance
      */
-    protected void createMBean(StandardServer server) {
+    protected void createMBean(Server server) {
         StoreLoader loader = new StoreLoader();
         try {
             Class<?> clazz = Class.forName(getStoreConfigClass(), true, this
                     .getClass().getClassLoader());
-            storeConfig = (IStoreConfig) clazz.newInstance();
-            if (null == getStoreRegistry())
-                // default Loading
-                loader.load();
-            else
-                // load a spezial file registry (url)
-                loader.load(getStoreRegistry());
+            storeConfig = (IStoreConfig) clazz.getConstructor().newInstance();
+            loader.load(getStoreRegistry());
             // use the loader Registry
             storeConfig.setRegistry(loader.getRegistry());
             storeConfig.setServer(server);
         } catch (Exception e) {
-            log.error("createMBean load", e);
+            log.error(sm.getString("storeConfigListener.loadError"), e);
             return;
         }
-        MBeanServer mserver = MBeanUtils.createServer();
         try {
-            ObjectName objectName = new ObjectName("Catalina:type=StoreConfig" );
-            if (!mserver.isRegistered(objectName)) {
-                registry.registerComponent(storeConfig, objectName, "StoreConfig");
-            }
+            // Note: Hard-coded domain used since this object is per Server/JVM
+            oname = new ObjectName("Catalina:type=StoreConfig" );
+            registry.registerComponent(storeConfig, oname, "StoreConfig");
         } catch (Exception ex) {
-            log.error("createMBean register MBean", ex);
+            log.error(sm.getString("storeConfigListener.registerError"), ex);
         }
     }
 
     /**
-     * Create a ManagedBean (StoreConfig)
+     * Create a ManagedBean (StoreConfig).
      *
-     * @param object
-     * @return The bean
-     * @throws Exception
+     * @param object The object to manage
+     * @return an MBean wrapping the object
+     * @throws Exception if an error occurred
      */
     protected DynamicMBean getManagedBean(Object object) throws Exception {
         ManagedBean managedBean = registry.findManagedBean("StoreConfig");
@@ -110,7 +115,7 @@ public class StoreConfigLifecycleListener implements LifecycleListener {
     }
 
     /**
-     * @return Returns the storeConfig.
+     * @return the store config instance
      */
     public IStoreConfig getStoreConfig() {
         return storeConfig;
@@ -125,7 +130,7 @@ public class StoreConfigLifecycleListener implements LifecycleListener {
     }
 
     /**
-     * @return Returns the storeConfigClass.
+     * @return the main store config class name
      */
     public String getStoreConfigClass() {
         return storeConfigClass;
@@ -140,7 +145,7 @@ public class StoreConfigLifecycleListener implements LifecycleListener {
     }
 
     /**
-     * @return Returns the storeRegistry.
+     * @return the store registry
      */
     public String getStoreRegistry() {
         return storeRegistry;
