@@ -19,6 +19,7 @@ package org.apache.el.lang;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.math.RoundingMode;
 
 import org.apache.el.util.MessageFactory;
 
@@ -53,7 +54,7 @@ public abstract class ELArithmetic {
         @Override
         protected Number divide(Number num0, Number num1) {
             return ((BigDecimal) num0).divide((BigDecimal) num1,
-                    BigDecimal.ROUND_HALF_UP);
+                    RoundingMode.HALF_UP);
         }
 
         @Override
@@ -63,7 +64,7 @@ public abstract class ELArithmetic {
 
         @Override
         protected Number mod(Number num0, Number num1) {
-            return new Double(num0.doubleValue() % num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() % num1.doubleValue());
         }
 
         @Override
@@ -98,7 +99,7 @@ public abstract class ELArithmetic {
 
         @Override
         protected Number divide(Number num0, Number num1) {
-            return (new BigDecimal((BigInteger) num0)).divide(new BigDecimal((BigInteger) num1), BigDecimal.ROUND_HALF_UP);
+            return (new BigDecimal((BigInteger) num0)).divide(new BigDecimal((BigInteger) num1), RoundingMode.HALF_UP);
         }
 
         @Override
@@ -132,7 +133,7 @@ public abstract class ELArithmetic {
             } else if (num1 instanceof BigDecimal) {
                 return ((new BigDecimal(num0.doubleValue()).add((BigDecimal) num1)));
             }
-            return new Double(num0.doubleValue() + num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() + num1.doubleValue());
         }
 
         @Override
@@ -141,22 +142,22 @@ public abstract class ELArithmetic {
                 return num;
             if (num instanceof BigInteger)
                 return new BigDecimal((BigInteger) num);
-            return new Double(num.doubleValue());
+            return Double.valueOf(num.doubleValue());
         }
 
         @Override
         protected Number coerce(String str) {
-            return new Double(str);
+            return Double.valueOf(str);
         }
 
         @Override
         protected Number divide(Number num0, Number num1) {
-            return new Double(num0.doubleValue() / num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() / num1.doubleValue());
         }
 
         @Override
         protected Number mod(Number num0, Number num1) {
-            return new Double(num0.doubleValue() % num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() % num1.doubleValue());
         }
 
         @Override
@@ -167,7 +168,7 @@ public abstract class ELArithmetic {
             } else if (num1 instanceof BigDecimal) {
                 return ((new BigDecimal(num0.doubleValue()).subtract((BigDecimal) num1)));
             }
-            return new Double(num0.doubleValue() - num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() - num1.doubleValue());
         }
 
         @Override
@@ -178,7 +179,7 @@ public abstract class ELArithmetic {
             } else if (num1 instanceof BigDecimal) {
                 return ((new BigDecimal(num0.doubleValue()).multiply((BigDecimal) num1)));
             }
-            return new Double(num0.doubleValue() * num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() * num1.doubleValue());
         }
 
         @Override
@@ -249,22 +250,10 @@ public abstract class ELArithmetic {
     private static final Long ZERO = Long.valueOf(0);
 
     public static final Number add(final Object obj0, final Object obj1) {
-        if (obj0 == null && obj1 == null) {
+        final ELArithmetic delegate = findDelegate(obj0, obj1);
+        if (delegate == null) {
             return Long.valueOf(0);
         }
-
-        final ELArithmetic delegate;
-        if (BIGDECIMAL.matches(obj0, obj1))
-            delegate = BIGDECIMAL;
-        else if (DOUBLE.matches(obj0, obj1)) {
-            if (BIGINTEGER.matches(obj0, obj1))
-                delegate = BIGDECIMAL;
-            else
-                delegate = DOUBLE;
-        } else if (BIGINTEGER.matches(obj0, obj1))
-            delegate = BIGINTEGER;
-        else
-            delegate = LONG;
 
         Number num0 = delegate.coerce(obj0);
         Number num1 = delegate.coerce(obj1);
@@ -294,22 +283,10 @@ public abstract class ELArithmetic {
     }
 
     public static final Number subtract(final Object obj0, final Object obj1) {
-        if (obj0 == null && obj1 == null) {
+        final ELArithmetic delegate = findDelegate(obj0, obj1);
+        if (delegate == null) {
             return Long.valueOf(0);
         }
-
-        final ELArithmetic delegate;
-        if (BIGDECIMAL.matches(obj0, obj1))
-            delegate = BIGDECIMAL;
-        else if (DOUBLE.matches(obj0, obj1)) {
-            if (BIGINTEGER.matches(obj0, obj1))
-                delegate = BIGDECIMAL;
-            else
-                delegate = DOUBLE;
-        } else if (BIGINTEGER.matches(obj0, obj1))
-            delegate = BIGINTEGER;
-        else
-            delegate = LONG;
 
         Number num0 = delegate.coerce(obj0);
         Number num1 = delegate.coerce(obj1);
@@ -337,27 +314,35 @@ public abstract class ELArithmetic {
     }
 
     public static final Number multiply(final Object obj0, final Object obj1) {
-        if (obj0 == null && obj1 == null) {
+        final ELArithmetic delegate = findDelegate(obj0, obj1);
+        if (delegate == null) {
             return Long.valueOf(0);
         }
-
-        final ELArithmetic delegate;
-        if (BIGDECIMAL.matches(obj0, obj1))
-            delegate = BIGDECIMAL;
-        else if (DOUBLE.matches(obj0, obj1)) {
-            if (BIGINTEGER.matches(obj0, obj1))
-                delegate = BIGDECIMAL;
-            else
-                delegate = DOUBLE;
-        } else if (BIGINTEGER.matches(obj0, obj1))
-            delegate = BIGINTEGER;
-        else
-            delegate = LONG;
 
         Number num0 = delegate.coerce(obj0);
         Number num1 = delegate.coerce(obj1);
 
         return delegate.multiply(num0, num1);
+    }
+
+    private static ELArithmetic findDelegate(final Object obj0, final Object obj1) {
+        if (obj0 == null && obj1 == null) {
+            return null;
+        }
+
+        if (BIGDECIMAL.matches(obj0, obj1)) {
+            return BIGDECIMAL;
+        } else if (DOUBLE.matches(obj0, obj1)) {
+            if (BIGINTEGER.matches(obj0, obj1)) {
+                return BIGDECIMAL;
+            } else {
+                return DOUBLE;
+            }
+        } else if (BIGINTEGER.matches(obj0, obj1)) {
+            return BIGINTEGER;
+        } else {
+            return LONG;
+        }
     }
 
     public static final boolean isNumber(final Object obj) {
