@@ -14,7 +14,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.juli;
 
 import java.io.File;
@@ -51,8 +50,28 @@ import java.util.logging.Logger;
  * Short configuration information will be sent to <code>System.err</code>.
  */
 public class ClassLoaderLogManager extends LogManager {
+
+    private static final boolean isJava9;
+
+    private static ThreadLocal<Boolean> addingLocalRootLogger = new ThreadLocal<Boolean>() {
+        @Override
+        protected Boolean initialValue() {
+            return Boolean.FALSE;
+        }
+    };
+
     public static final String DEBUG_PROPERTY =
             ClassLoaderLogManager.class.getName() + ".debug";
+
+    static {
+        Class<?> c = null;
+        try {
+            c = Class.forName("java.lang.Runtime$Version");
+        } catch (ClassNotFoundException e) {
+            // Must be Java 8
+        }
+        isJava9 = c != null;
+    }
 
     private final class Cleaner extends Thread {
 
@@ -87,7 +106,7 @@ public class ClassLoaderLogManager extends LogManager {
      * application redeployment.
      */
     protected final Map<ClassLoader, ClassLoaderLogInfo> classLoaderLoggers =
-        new WeakHashMap<>();
+            new WeakHashMap<>(); // Guarded by this
 
 
     /**
@@ -207,7 +226,7 @@ public class ClassLoaderLogManager extends LogManager {
         // Unlike java.util.logging, the default is to not delegate if a list of handlers
         // has been specified for the logger.
         String useParentHandlersString = getProperty(loggerName + ".useParentHandlers");
-        if (Boolean.valueOf(useParentHandlersString).booleanValue()) {
+        if (Boolean.parseBoolean(useParentHandlersString)) {
             logger.setUseParentHandlers(true);
         }
 
@@ -252,6 +271,13 @@ public class ClassLoaderLogManager extends LogManager {
      */
     @Override
     public String getProperty(String name) {
+
+        // Use a ThreadLocal to work around
+        // https://bugs.openjdk.java.net/browse/JDK-8195096
+        if (".handlers".equals(name) && !addingLocalRootLogger.get().booleanValue()) {
+            return null;
+        }
+
         String prefix = this.prefix.get();
         String result = null;
 
@@ -274,7 +300,7 @@ public class ClassLoaderLogManager extends LogManager {
     }
 
 
-    private String findProperty(String name) {
+    private synchronized String findProperty(String name) {
         ClassLoader classLoader = Thread.currentThread()
                 .getContextClassLoader();
         ClassLoaderLogInfo info = getClassLoaderInfo(classLoader);
@@ -344,7 +370,7 @@ public class ClassLoaderLogManager extends LogManager {
     /**
      * Shuts down the logging system.
      */
-    public void shutdown() {
+    public synchronized void shutdown() {
         // The JVM is being shutdown. Make sure all loggers for all class
         // loaders are shutdown
         for (ClassLoaderLogInfo clLogInfo : classLoaderLoggers.values()) {
@@ -387,8 +413,9 @@ public class ClassLoaderLogManager extends LogManager {
      *
      * @param classLoader The classloader for which we will retrieve or build the
      *                    configuration
+     * @return the log configuration
      */
-    protected ClassLoaderLogInfo getClassLoaderInfo(ClassLoader classLoader) {
+    protected synchronized ClassLoaderLogInfo getClassLoaderInfo(ClassLoader classLoader) {
 
         if (classLoader == null) {
             classLoader = ClassLoader.getSystemClassLoader();
@@ -416,17 +443,21 @@ public class ClassLoaderLogManager extends LogManager {
     /**
      * Read configuration for the specified classloader.
      *
-     * @param classLoader
-     * @throws IOException Error
+     * @param classLoader The classloader
+     * @throws IOException Error reading configuration
      */
-    protected void readConfiguration(ClassLoader classLoader)
+    protected synchronized void readConfiguration(ClassLoader classLoader)
         throws IOException {
 
         InputStream is = null;
         // Special case for URL classloaders which are used in containers:
         // only look in the local repositories to avoid redefining loggers 20 times
         try {
-            if (classLoader instanceof URLClassLoader) {
+            if (classLoader instanceof WebappProperties) {
+                if (((WebappProperties) classLoader).hasLoggingConfig()) {
+                    is = classLoader.getResourceAsStream("logging.properties");
+                }
+            } else if (classLoader instanceof URLClassLoader) {
                 URL logConfig = ((URLClassLoader)classLoader).findResource("logging.properties");
 
                 if(null != logConfig) {
@@ -468,17 +499,20 @@ public class ClassLoaderLogManager extends LogManager {
                 try {
                     is = new FileInputStream(replace(configFileStr));
                 } catch (IOException e) {
-                    // Ignore
+                    System.err.println("Configuration error");
+                    e.printStackTrace();
                 }
             }
             // Try the default JVM configuration
             if (is == null) {
-                File defaultFile = new File(new File(System.getProperty("java.home"), "lib"),
+                File defaultFile = new File(new File(System.getProperty("java.home"),
+                                                     isJava9 ? "conf" : "lib"),
                     "logging.properties");
                 try {
                     is = new FileInputStream(defaultFile);
                 } catch (IOException e) {
-                    // Critical problem, do something ...
+                    System.err.println("Configuration error");
+                    e.printStackTrace();
                 }
             }
         }
@@ -503,8 +537,14 @@ public class ClassLoaderLogManager extends LogManager {
         if (is != null) {
             readConfiguration(is, classLoader);
         }
-        addLogger(localRootLogger);
-
+        try {
+            // Use a ThreadLocal to work around
+            // https://bugs.openjdk.java.net/browse/JDK-8195096
+            addingLocalRootLogger.set(Boolean.TRUE);
+            addLogger(localRootLogger);
+        } finally {
+            addingLocalRootLogger.set(Boolean.FALSE);
+        }
     }
 
 
@@ -515,7 +555,7 @@ public class ClassLoaderLogManager extends LogManager {
      * @param classLoader for which the configuration will be loaded
      * @throws IOException If something wrong happens during loading
      */
-    protected void readConfiguration(InputStream is, ClassLoader classLoader)
+    protected synchronized void readConfiguration(InputStream is, ClassLoader classLoader)
         throws IOException {
 
         ClassLoaderLogInfo info = classLoaderLoggers.get(classLoader);
@@ -548,7 +588,7 @@ public class ClassLoaderLogManager extends LogManager {
                     continue;
                 }
                 // Parse and remove a prefix (prefix start with a digit, such as
-                // "10WebappFooHanlder.")
+                // "10WebappFooHandler.")
                 if (Character.isDigit(handlerClassName.charAt(0))) {
                     int pos = handlerClassName.indexOf('.');
                     if (pos >= 0) {
@@ -558,8 +598,8 @@ public class ClassLoaderLogManager extends LogManager {
                 }
                 try {
                     this.prefix.set(prefix);
-                    Handler handler =
-                        (Handler) classLoader.loadClass(handlerClassName).newInstance();
+                    Handler handler = (Handler) classLoader.loadClass(
+                            handlerClassName).getConstructor().newInstance();
                     // The specification strongly implies all configuration should be done
                     // during the creation of the handler object.
                     // This includes setting level, filter, formatter and encoding.
@@ -583,8 +623,8 @@ public class ClassLoaderLogManager extends LogManager {
     /**
      * Set parent child relationship between the two specified loggers.
      *
-     * @param logger
-     * @param parent
+     * @param logger The logger
+     * @param parent The parent logger
      */
     protected static void doSetParentLogger(final Logger logger,
             final Logger parent) {
@@ -618,8 +658,11 @@ public class ClassLoaderLogManager extends LogManager {
                     break;
                 }
                 String propName = str.substring(pos_start + 2, pos_end);
-                String replacement = propName.length() > 0 ? System
-                        .getProperty(propName) : null;
+
+                String replacement = replaceWebApplicationProperties(propName);
+                if (replacement == null) {
+                    replacement = propName.length() > 0 ? System.getProperty(propName) : null;
+                }
                 if (replacement != null) {
                     builder.append(replacement);
                 } else {
@@ -633,15 +676,35 @@ public class ClassLoaderLogManager extends LogManager {
         return result;
     }
 
+
+    private String replaceWebApplicationProperties(String propName) {
+        ClassLoader cl = Thread.currentThread().getContextClassLoader();
+        if (cl instanceof WebappProperties) {
+            WebappProperties wProps = (WebappProperties) cl;
+            if ("classloader.webappName".equals(propName)) {
+                return wProps.getWebappName();
+            } else if ("classloader.hostName".equals(propName)) {
+                return wProps.getHostName();
+            } else if ("classloader.serviceName".equals(propName)) {
+                return wProps.getServiceName();
+            } else {
+                return null;
+            }
+        } else {
+            return null;
+        }
+    }
+
+
     // ---------------------------------------------------- LogNode Inner Class
 
 
     protected static final class LogNode {
         Logger logger;
 
-        protected final Map<String, LogNode> children = new HashMap<>();
+        final Map<String, LogNode> children = new HashMap<>();
 
-        protected final LogNode parent;
+        final LogNode parent;
 
         LogNode(final LogNode parent, final Logger logger) {
             this.parent = parent;
