@@ -22,7 +22,6 @@ package org.apache.tomcat.util.modeler;
 import java.lang.reflect.Method;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 
@@ -39,6 +38,9 @@ import javax.management.ReflectionException;
 import javax.management.RuntimeOperationsException;
 import javax.management.ServiceNotFoundException;
 
+import org.apache.tomcat.util.buf.StringUtils;
+import org.apache.tomcat.util.res.StringManager;
+
 
 /**
  * <p>Internal configuration information for a managed bean (MBean)
@@ -49,18 +51,19 @@ import javax.management.ServiceNotFoundException;
 public class ManagedBean implements java.io.Serializable {
 
     private static final long serialVersionUID = 1L;
+    private static final StringManager sm = StringManager.getManager(ManagedBean.class);
 
     private static final String BASE_MBEAN = "org.apache.tomcat.util.modeler.BaseModelMBean";
     // ----------------------------------------------------- Instance Variables
     static final Class<?>[] NO_ARGS_PARAM_SIG = new Class[0];
 
 
-    private ReadWriteLock mBeanInfoLock = new ReentrantReadWriteLock();
+    private final ReadWriteLock mBeanInfoLock = new ReentrantReadWriteLock();
     /**
      * The <code>ModelMBeanInfo</code> object that corresponds
      * to this <code>ManagedBean</code> instance.
      */
-    private transient MBeanInfo info = null;
+    private transient volatile MBeanInfo info = null;
 
     private Map<String,AttributeInfo> attributes = new HashMap<>();
 
@@ -91,7 +94,7 @@ public class ManagedBean implements java.io.Serializable {
 
 
     /**
-     * The collection of attributes for this MBean.
+     * @return the collection of attributes for this MBean.
      */
     public AttributeInfo[] getAttributes() {
         AttributeInfo result[] = new AttributeInfo[attributes.size()];
@@ -105,48 +108,47 @@ public class ManagedBean implements java.io.Serializable {
      * described by this descriptor.  If not specified, the standard JMX
      * class (<code>javax.management.modelmbean.RequiredModeLMBean</code>)
      * will be utilized.
+     * @return the class name
      */
     public String getClassName() {
-        return (this.className);
+        return this.className;
     }
 
     public void setClassName(String className) {
-        Lock l = mBeanInfoLock.writeLock();
-        l.lock();
+        mBeanInfoLock.writeLock().lock();
         try {
             this.className = className;
             this.info = null;
         } finally {
-            l.unlock();
+            mBeanInfoLock.writeLock().unlock();
         }
     }
 
 
     /**
-     * The human-readable description of this MBean.
+     * @return the human-readable description of this MBean.
      */
     public String getDescription() {
-        return (this.description);
+        return this.description;
     }
 
     public void setDescription(String description) {
-        Lock l = mBeanInfoLock.writeLock();
-        l.lock();
+        mBeanInfoLock.writeLock().lock();
         try {
             this.description = description;
             this.info = null;
         } finally {
-            l.unlock();
+            mBeanInfoLock.writeLock().unlock();
         }
     }
 
 
     /**
-     * The (optional) <code>ObjectName</code> domain in which this MBean
-     * should be registered in the MBeanServer.
+     * @return the (optional) <code>ObjectName</code> domain in which
+     *  this MBean should be registered in the MBeanServer.
      */
     public String getDomain() {
-        return (this.domain);
+        return this.domain;
     }
 
     public void setDomain(String domain) {
@@ -155,10 +157,10 @@ public class ManagedBean implements java.io.Serializable {
 
 
     /**
-     * The (optional) group to which this MBean belongs.
+     * @return the (optional) group to which this MBean belongs.
      */
     public String getGroup() {
-        return (this.group);
+        return this.group;
     }
 
     public void setGroup(String group) {
@@ -167,35 +169,34 @@ public class ManagedBean implements java.io.Serializable {
 
 
     /**
-     * The name of this managed bean, which must be unique among all
-     * MBeans managed by a particular MBeans server.
+     * @return the name of this managed bean, which must be unique
+     *  among all MBeans managed by a particular MBeans server.
      */
     public String getName() {
-        return (this.name);
+        return this.name;
     }
 
     public void setName(String name) {
-        Lock l = mBeanInfoLock.writeLock();
-        l.lock();
+        mBeanInfoLock.writeLock().lock();
         try {
             this.name = name;
             this.info = null;
         } finally {
-            l.unlock();
+            mBeanInfoLock.writeLock().unlock();
         }
     }
 
 
     /**
-     * The collection of notifications for this MBean.
+     * @return the collection of notifications for this MBean.
      */
     public NotificationInfo[] getNotifications() {
-        return (this.notifications);
+        return this.notifications;
     }
 
 
     /**
-     * The collection of operations for this MBean.
+     * @return the collection of operations for this MBean.
      */
     public OperationInfo[] getOperations() {
         OperationInfo[] result = new OperationInfo[operations.size()];
@@ -205,22 +206,21 @@ public class ManagedBean implements java.io.Serializable {
 
 
     /**
-     * The fully qualified name of the Java class of the resource
+     * @return the fully qualified name of the Java class of the resource
      * implementation class described by the managed bean described
      * by this descriptor.
      */
     public String getType() {
-        return (this.type);
+        return this.type;
     }
 
     public void setType(String type) {
-        Lock l = mBeanInfoLock.writeLock();
-        l.lock();
+        mBeanInfoLock.writeLock().lock();
         try {
             this.type = type;
             this.info = null;
         } finally {
-            l.unlock();
+            mBeanInfoLock.writeLock().unlock();
         }
     }
 
@@ -244,10 +244,7 @@ public class ManagedBean implements java.io.Serializable {
      * @param notification The new notification descriptor
      */
     public void addNotification(NotificationInfo notification) {
-
-        Lock l = mBeanInfoLock.writeLock();
-
-        l.lock();
+        mBeanInfoLock.writeLock().lock();
         try {
             NotificationInfo results[] =
                 new NotificationInfo[notifications.length + 1];
@@ -257,7 +254,7 @@ public class ManagedBean implements java.io.Serializable {
             notifications = results;
             this.info = null;
         } finally {
-            l.unlock();
+            mBeanInfoLock.writeLock().unlock();
         }
     }
 
@@ -282,7 +279,7 @@ public class ManagedBean implements java.io.Serializable {
      *
      * @param instance Instanced of the managed object, or <code>null</code>
      *  for no associated instance
-     *
+     * @return the MBean
      * @exception InstanceNotFoundException if the managed resource
      *  object cannot be found
      * @exception MBeanException if a problem occurs instantiating the
@@ -319,17 +316,16 @@ public class ManagedBean implements java.io.Serializable {
 
             if( clazz==null) {
                 throw new MBeanException
-                    (ex, "Cannot load ModelMBean class " + getClassName());
+                    (ex, sm.getString("managedMBean.cannotLoadClass", getClassName()));
             }
             try {
                 // Stupid - this will set the default minfo first....
-                mbean = (BaseModelMBean) clazz.newInstance();
+                mbean = (BaseModelMBean) clazz.getConstructor().newInstance();
             } catch (RuntimeOperationsException e) {
                 throw e;
             } catch (Exception e) {
                 throw new MBeanException
-                    (e, "Cannot instantiate ModelMBean of class " +
-                     getClassName());
+                    (e, sm.getString("managedMBean.cannotInstantiateClass", getClassName()));
             }
         }
 
@@ -342,62 +338,64 @@ public class ManagedBean implements java.io.Serializable {
         } catch (InstanceNotFoundException e) {
             throw e;
         }
-        return (mbean);
 
+        return mbean;
     }
 
 
     /**
      * Create and return a <code>ModelMBeanInfo</code> object that
      * describes this entire managed bean.
+     * @return the MBean info
      */
     MBeanInfo getMBeanInfo() {
 
         // Return our cached information (if any)
-        Lock l = mBeanInfoLock.readLock();
-        l.lock();
+        mBeanInfoLock.readLock().lock();
         try {
-            if (info != null)
+            if (info != null) {
                 return info;
+            }
         } finally {
-            l.unlock();
+            mBeanInfoLock.readLock().unlock();
         }
 
-        l = mBeanInfoLock.writeLock();
-        l.lock();
+        mBeanInfoLock.writeLock().lock();
         try {
-            // Create subordinate information descriptors as required
-            AttributeInfo attrs[] = getAttributes();
-            MBeanAttributeInfo attributes[] =
-                new MBeanAttributeInfo[attrs.length];
-            for (int i = 0; i < attrs.length; i++)
-                attributes[i] = attrs[i].createAttributeInfo();
+            if (info == null) {
+                // Create subordinate information descriptors as required
+                AttributeInfo attrs[] = getAttributes();
+                MBeanAttributeInfo attributes[] =
+                    new MBeanAttributeInfo[attrs.length];
+                for (int i = 0; i < attrs.length; i++)
+                    attributes[i] = attrs[i].createAttributeInfo();
 
-            OperationInfo opers[] = getOperations();
-            MBeanOperationInfo operations[] =
-                new MBeanOperationInfo[opers.length];
-            for (int i = 0; i < opers.length; i++)
-                operations[i] = opers[i].createOperationInfo();
-
-
-            NotificationInfo notifs[] = getNotifications();
-            MBeanNotificationInfo notifications[] =
-                new MBeanNotificationInfo[notifs.length];
-            for (int i = 0; i < notifs.length; i++)
-                notifications[i] = notifs[i].createNotificationInfo();
+                OperationInfo opers[] = getOperations();
+                MBeanOperationInfo operations[] =
+                    new MBeanOperationInfo[opers.length];
+                for (int i = 0; i < opers.length; i++)
+                    operations[i] = opers[i].createOperationInfo();
 
 
-            // Construct and return a new ModelMBeanInfo object
-            info = new MBeanInfo(getClassName(),
-                                 getDescription(),
-                                 attributes,
-                                 new MBeanConstructorInfo[] {},
-                                 operations,
-                                 notifications);
+                NotificationInfo notifs[] = getNotifications();
+                MBeanNotificationInfo notifications[] =
+                    new MBeanNotificationInfo[notifs.length];
+                for (int i = 0; i < notifs.length; i++)
+                    notifications[i] = notifs[i].createNotificationInfo();
+
+
+                // Construct and return a new ModelMBeanInfo object
+                info = new MBeanInfo(getClassName(),
+                                     getDescription(),
+                                     attributes,
+                                     new MBeanConstructorInfo[] {},
+                                     operations,
+                                     notifications);
+            }
 
             return info;
         } finally {
-            l.unlock();
+            mBeanInfoLock.writeLock().unlock();
         }
     }
 
@@ -422,7 +420,7 @@ public class ManagedBean implements java.io.Serializable {
         sb.append(", type=");
         sb.append(type);
         sb.append("]");
-        return (sb.toString());
+        return sb.toString();
 
     }
 
@@ -434,11 +432,9 @@ public class ManagedBean implements java.io.Serializable {
         AttributeInfo attrInfo = attributes.get(aname);
         // Look up the actual operation to be used
         if (attrInfo == null)
-            throw new AttributeNotFoundException(" Cannot find attribute " + aname + " for " + resource);
+            throw new AttributeNotFoundException(sm.getString("managedMBean.noAttribute", aname, resource));
 
         String getMethod = attrInfo.getGetMethod();
-        if (getMethod == null)
-            throw new AttributeNotFoundException("Cannot find attribute " + aname + " get method name");
 
         Object object = null;
         NoSuchMethodException exception = null;
@@ -448,7 +444,7 @@ public class ManagedBean implements java.io.Serializable {
         } catch (NoSuchMethodException e) {
             exception = e;
         }
-        if( m== null && resource != null ) {
+        if (m == null && resource != null) {
             try {
                 object = resource;
                 m = object.getClass().getMethod(getMethod, NO_ARGS_PARAM_SIG);
@@ -457,9 +453,9 @@ public class ManagedBean implements java.io.Serializable {
                 exception = e;
             }
         }
-        if( exception != null )
-            throw new ReflectionException(exception,
-                                          "Cannot find getter method " + getMethod);
+        if (exception != null) {
+            throw new ReflectionException(exception, sm.getString("managedMBean.noGet", getMethod, resource));
+        }
 
         return m;
     }
@@ -470,18 +466,15 @@ public class ManagedBean implements java.io.Serializable {
         Method m = null;
 
         AttributeInfo attrInfo = attributes.get(aname);
-        if (attrInfo == null)
-            throw new AttributeNotFoundException(" Cannot find attribute " + aname);
+        if (attrInfo == null) {
+            throw new AttributeNotFoundException(sm.getString("managedMBean.noAttribute", aname, resource));
+        }
 
         // Look up the actual operation to be used
         String setMethod = attrInfo.getSetMethod();
-        if (setMethod == null)
-            throw new AttributeNotFoundException("Cannot find attribute " + aname + " set method name");
-
         String argType=attrInfo.getType();
 
-        Class<?> signature[] =
-            new Class[] { BaseModelMBean.getAttributeClass( argType ) };
+        Class<?> signature[] = new Class[] { BaseModelMBean.getAttributeClass( argType ) };
 
         Object object = null;
         NoSuchMethodException exception = null;
@@ -491,7 +484,7 @@ public class ManagedBean implements java.io.Serializable {
         } catch (NoSuchMethodException e) {
             exception = e;
         }
-        if( m== null && resource != null ) {
+        if (m == null && resource != null) {
             try {
                 object = resource;
                 m = object.getClass().getMethod(setMethod, signature);
@@ -500,10 +493,9 @@ public class ManagedBean implements java.io.Serializable {
                 exception = e;
             }
         }
-        if( exception != null )
-            throw new ReflectionException(exception,
-                                          "Cannot find setter method " + setMethod +
-                    " " + resource);
+        if (exception != null) {
+            throw new ReflectionException(exception, sm.getString("managedMBean.noSet", setMethod, resource));
+        }
 
         return m;
     }
@@ -519,18 +511,16 @@ public class ManagedBean implements java.io.Serializable {
             signature = new String[0];
         if (params.length != signature.length)
             throw new RuntimeOperationsException(
-                    new IllegalArgumentException(
-                            "Inconsistent arguments and signature"),
-                    "Inconsistent arguments and signature");
+                    new IllegalArgumentException(sm.getString("managedMBean.inconsistentArguments")),
+                    sm.getString("managedMBean.inconsistentArguments"));
 
         // Acquire the ModelMBeanOperationInfo information for
         // the requested operation
         OperationInfo opInfo =
                 operations.get(createOperationKey(aname, signature));
         if (opInfo == null)
-            throw new MBeanException(new ServiceNotFoundException(
-                    "Cannot find operation " + aname),
-                    "Cannot find operation " + aname);
+            throw new MBeanException(new ServiceNotFoundException(sm.getString("managedMBean.noOperation", aname)),
+                    sm.getString("managedMBean.noOperation", aname));
 
         // Prepare the signature required by Java reflection APIs
         // FIXME - should we use the signature from opInfo?
@@ -559,8 +549,7 @@ public class ManagedBean implements java.io.Serializable {
             exception = e;
         }
         if (method == null) {
-            throw new ReflectionException(exception, "Cannot find method "
-                    + aname + " with this signature");
+            throw new ReflectionException(exception, sm.getString("managedMBean.noMethod", aname));
         }
 
         return method;
@@ -570,28 +559,19 @@ public class ManagedBean implements java.io.Serializable {
     private String createOperationKey(OperationInfo operation) {
         StringBuilder key = new StringBuilder(operation.getName());
         key.append('(');
-        for (ParameterInfo parameterInfo: operation.getSignature()) {
-            key.append(parameterInfo.getType());
-            // Note: A trailing ',' does not matter in this case
-            key.append(',');
-        }
+        StringUtils.join(operation.getSignature(), ',', (x) -> x.getType(), key);
         key.append(')');
 
-        return key.toString();
+        return key.toString().intern();
     }
 
 
-    private String createOperationKey(String methodName,
-            String[] parameterTypes) {
+    private String createOperationKey(String methodName, String[] parameterTypes) {
         StringBuilder key = new StringBuilder(methodName);
         key.append('(');
-        for (String parameter: parameterTypes) {
-            key.append(parameter);
-            // Note: A trailing ',' does not matter in this case
-            key.append(',');
-        }
+        StringUtils.join(parameterTypes, ',', key);
         key.append(')');
 
-        return key.toString();
+        return key.toString().intern();
     }
 }
